[gd_scene load_steps=10 format=2]

[ext_resource path="res://House.gd" type="Script" id=1]
[ext_resource path="res://sprites/scenes/doors.png" type="Texture" id=2]
[ext_resource path="res://sprites/scenes/houses.png" type="Texture" id=3]
[ext_resource path="res://objects/Door.gd" type="Script" id=4]
[ext_resource path="res://sprites/gameplay/UI/controls.png" type="Texture" id=5]
[ext_resource path="res://sound/sfx/candyContainer.wav" type="AudioStream" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 96, 31.473 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 16, 16 )

[sub_resource type="Animation" id=3]
resource_name = "Available"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Aval:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 0.482969, 0.482969, 0.482969 ),
"update": 0,
"values": [ Vector2( -85.149, -16 ), Vector2( -85.149, -10 ), Vector2( -85.149, -16 ) ]
}

[node name="House" type="StaticBody2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 3 )
vframes = 8
hframes = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -21.7515, 7.43233 )
shape = SubResource( 1 )

[node name="Door" type="StaticBody2D" parent="."]
collision_layer = 10
collision_mask = 10
script = ExtResource( 4 )

[node name="Sprite" type="Sprite" parent="Door"]
position = Vector2( -84.985, 12.008 )
texture = ExtResource( 2 )
vframes = 15
hframes = 15

[node name="CollisionShape2D" type="CollisionShape2D" parent="Door"]
position = Vector2( -85.149, 22.693 )
shape = SubResource( 2 )

[node name="Timer" type="Timer" parent="Door"]

[node name="OpenTime" type="Timer" parent="Door"]
wait_time = 3.0

[node name="Aval" type="Sprite" parent="Door"]
visible = false
position = Vector2( -85.149, -10.6258 )
texture = ExtResource( 5 )
vframes = 8
hframes = 8

[node name="AnimationPlayer" type="AnimationPlayer" parent="Door"]
anims/Available = SubResource( 3 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="Door"]
stream = ExtResource( 6 )
[connection signal="timeout" from="Door/Timer" to="Door" method="_on_opened"]
[connection signal="timeout" from="Door/OpenTime" to="Door" method="_closeDoor"]
